<resources>
    <string name="app_name">IntentsDemo</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="mood">Mood:</string>
    <string name="feeling_label">How are you feeling?</string>
    <string name="default_mood">2</string>
    <string name="select_mood">Tell us</string>
    <string name="submitMood">Submit</string>
    <string name="mood_cancel">Cancel</string>
    <string name="mood_submit">Submit</string>
    <string name="name_label">Name:</string>
    <string name="back">Back</string>
</resources>