<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectMood"
    android:padding="10dp">

    <TextView
        android:id="@+id/textViewFeelingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feeling_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094" />

    <SeekBar
        android:id="@+id/seekBarMood"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="4"
        android:progress="1"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewMood"
        app:layout_constraintEnd_toStartOf="@+id/imageViewMood"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewMood"
        app:layout_constraintVertical_bias="0.285" />

    <ImageView
        android:id="@+id/imageViewMood"
        android:layout_width="57dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seekBarMood"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ok" />

    <TextView
        android:id="@+id/textViewMoodValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_mood"
        app:layout_constraintEnd_toEndOf="@+id/imageViewMood"
        app:layout_constraintStart_toStartOf="@+id/imageViewMood"
        app:layout_constraintTop_toBottomOf="@+id/imageViewMood" />

    <Button
        android:id="@+id/buttonMoodCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:text="@string/mood_cancel"
        app:layout_constraintBottom_toBottomOf="@+id/buttonMoodSubmit"
        app:layout_constraintEnd_toStartOf="@+id/buttonMoodSubmit"
        app:layout_constraintHorizontal_bias="0.215"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonMoodSubmit"
        app:layout_constraintVertical_bias="0.571" />

    <Button
        android:id="@+id/buttonMoodSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:text="@string/mood_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.573" />
</androidx.constraintlayout.widget.ConstraintLayout>