<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainForm"
android:padding="10dp">

<TextView
    android:id="@+id/textViewName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Name"
    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
    app:layout_constraintBottom_toBottomOf="@+id/editTextName"
    app:layout_constraintEnd_toStartOf="@+id/editTextName"
    app:layout_constraintHorizontal_bias="0.376"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/editTextName"
    app:layout_constraintVertical_bias="0.461" />

<EditText
    android:id="@+id/editTextName"
    android:layout_width="210dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:ems="10"
    android:hint="Enter name."
    android:inputType="text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.835"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<EditText
    android:id="@+id/editTextAge"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:ems="10"
    android:hint="Enter age."
    android:inputType="number"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.805"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editTextName" />

<TextView
    android:id="@+id/textViewAge"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/age"
    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
    app:layout_constraintBottom_toBottomOf="@+id/editTextAge"
    app:layout_constraintEnd_toStartOf="@+id/editTextAge"
    app:layout_constraintHorizontal_bias="0.35"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/editTextAge" />

<Button
    android:id="@+id/buttonSelectMood"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="24dp"
    android:text="@string/select_mood"
    app:layout_constraintBottom_toBottomOf="@+id/imageViewMoodView"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@+id/imageViewMoodView" />

<TextView
    android:id="@+id/textViewMood"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/mood"
    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
    app:layout_constraintBottom_toBottomOf="@+id/buttonSelectMood"
    app:layout_constraintEnd_toStartOf="@+id/imageViewMoodView"
    app:layout_constraintHorizontal_bias="0.341"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/buttonSelectMood"
    app:layout_constraintVertical_bias="0.517" />

<ImageView
    android:id="@+id/imageViewMoodView"
    android:layout_width="76dp"
    android:layout_height="80dp"
    android:layout_marginEnd="48dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/buttonSelectMood"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.325"
    app:srcCompat="@drawable/ok" />

<Button
    android:id="@+id/buttonSubmit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="292dp"
    android:text="Submit"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

<TextView
    android:id="@+id/textViewMoodCaption"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    app:layout_constraintEnd_toEndOf="@+id/imageViewMoodView"
    app:layout_constraintHorizontal_bias="0.722"
    app:layout_constraintStart_toStartOf="@+id/imageViewMoodView"
    app:layout_constraintTop_toBottomOf="@+id/imageViewMoodView" />

</androidx.constraintlayout.widget.ConstraintLayout>